<resources>
    <string name="ttid">702640</string>
    <string name="guide_exclusive_debut" />
    <string name="sso_version_code_key">com.taobao.android.sso.Version</string>
    <string name="qr_unkown_code_type">发现非标准商品条码</string>
    <string name="kakalib_adi_product_title_unknown">未知的商品</string>
    <string name="kakalib_adi_price_unknown">未知的价格</string>
    <string name="kakalib_adi_no_network">网络连接不可用</string>
    <string name="kakalib_adi_no_network_product">需要联网来查询产品信息</string>
    <string name="kakalib_adi_product_no_info">无法读取到对应的商品</string>
    <string name="kakalib_adi_express_no_info">无法读取到对应的运单</string>
    <string name="kakalib_adi_product_bar_code">商品编码%s</string>
    <string name="kakalib_adi_title_url">网址链接</string>
    <string name="kakalib_adi_title_text">文本信息</string>
    <string name="kakalib_adi_title_express">快递信息</string>
    <string name="kakalib_adi_title_product">商品信息</string>
    <string name="kakalib_url_huoyan_apk_download">http://ma.m.taobao.com/hxdhb</string>
    <string name="kakalib_kaka_package_name">com.etao.kaka</string>
    <string name="kakalib_url_need_translate">ma.m.taobao.com#ma.taobao.com#q.ma.taobao.com</string>
    <string name="kakalib_app_name">一淘火眼扫一扫</string>
    <string name="kakalib_msg_camera_framework_bug">摄像头异常，请重启设备后重试</string>
    <string name="kakalib_online_price">网购价</string>
    <string name="kakalib_online_taobao_price">淘宝价</string>
    <string name="kakalib_offline_price">超市价</string>
    <string name="kakalib_save">省%1$s元</string>
    <string name="kakalib_pieces">多件装</string>
    <string name="kakalib_go_to_tao_search">"尚未找到精确结果
点击前往淘宝网搜索"</string>
    <string name="kakalib_ugc_will_update">近期即将更新该产品信息</string>
    <string name="kakalib_ugc_bar">条形码</string>
    <string name="kakalib_server_error">服务器错误</string>
    <string name="kakalib_net_error">网络异常</string>
    <string name="kakalib_kl_button_decode_poster">海报解析</string>
    <string name="kakalib_kl_button_decode_qr">扫描QR</string>
    <string name="kakalib_qr_url_text">二维码内容：</string>
    <string name="kakalib_copyed">内容已复制</string>
    <string name="kakalib_copyError">复制失败</string>
    <string name="kakalib_huoyan_ad_open">打开火眼</string>
    <string name="kakalib_huoyan_ad_download">免费下载</string>
    <string name="kakalib_url_safe_checking">正在检测网址是否安全</string>
    <string name="kakalib_url_safe_checking_netwrong">网络错误，无法确定网址安全性，谨慎访问。</string>
    <string name="kakalib_url_black">该网址是恶意网址，会带来安全风险，请不要访问。</string>
    <string name="kakalib_url_white">可信任安全网址</string>
    <string name="kakalib_url_unknow">无法确定网址安全性，谨慎访问。</string>
    <string name="kakalib_no_image_obtain">没有取得图片</string>
    <string name="kakalib_network_error">网络不可用，请设置网络</string>
    <string name="kakalib_no_qr_obtain">找不到二维码</string>
    <string name="kakalib_unknow_code">发现未知商品条码，我们会尽快收录</string>
    <string name="kakalib_product_not_found">未搜索到商品结果,点击修改关键词搜索</string>
    <string name="kakalib_search_by_keyword">通过关键词搜索</string>
    <string name="kakalib_kaka_name">一淘火眼</string>
    <string name="kakalib_kaka_slogan">扫码就用一淘火眼</string>
    <string name="kakalib_kaka_downcount">(300万下载)</string>
    <string name="kakalib_slogan_scan_barcode">"  扫条码, 超市网购价格全知道"</string>
    <string name="kakalib_slogan_scan_poster">"  扫杂志, 时尚潮品看到就能买到"</string>
    <string name="kakalib_slogan_scan_butterfly">"  抓蝴蝶, 交友约会天天抢优惠"</string>
    <string name="kakalib_ad_free_download">免费下载</string>
    <string name="kakalib_ad_poweredby">"POWERED BY 
扫  码  就  用  一  淘  火  眼"</string>
    <string name="kakalib_poster_decode_failed">未识别成功</string>
    <string name="kakalib_poster_advise">尝试将海报或者杂志置于框内</string>
    <string name="kakalib_poster_advise1">可提高识别率</string>
    <string name="kakalib_data_from_kaka">由一淘火眼合作支持</string>
    <string name="kakalib_data_by_kaka">以上数据由一淘火眼提供，网购、超市全能比价。</string>
    <string name="kakalib_help_advise">"将商品条型码、二维码置于框内，离镜头10cm左右，可自动识别。 "</string>
    <string name="kakalib_help_barcode">条形码</string>
    <string name="kakalib_help_qr">二维码</string>
    <string name="kakalib_kaka_profession_scan">专业扫描</string>
    <string name="kakalib_bar_qr_code">条形码·二维码</string>
    <string name="kakalib_unkown_code_as_express">作为快递单号查询:</string>
    <string name="kakalib_unkown_code_type">发现非标准商品条码</string>
    <string name="kakalib_express_company">物流公司:</string>
    <string name="kakalib_express_no">快递单号</string>
    <string name="kakalib_please_choise">请选择:</string>
    <string name="kakalib_express_code_type0">该运单存在多个快递公司</string>
    <string name="kakalib_express_code_type1">运单号</string>
    <string name="kakalib_express_info">快递信息</string>
    <string name="app_name">锁屏宝</string>
    <string name="launcher_name">锁屏宝(推荐)</string>
    <string name="action_settings">设置</string>
    <string name="setting_title">ADI锁屏</string>
    <string name="adi_lock_start_title">开启锁屏</string>
    <string name="adi_lock_chose_summary">系统默认</string>
    <string name="adi_lock_chose_title">解锁方式</string>
    <string name="adi_lock_background_title">壁纸设置</string>
    <string name="adi_lock_background_freq">壁纸更换频率</string>
    <string name="adi_lock_account_title">账号管理</string>
    <string name="adi_lock_page_manage_title">页面管理</string>
    <string name="adi_weather_city_title">天气城市</string>
    <string name="adi_lock_page_manage_subtitle">可定制页面：今日头条、内涵段子、网站服务</string>
    <string name="adi_lock_wallpaper_view_title">壁纸预览</string>
    <string name="adi_lock_account_key">adi_lock_account_key</string>
    <string name="adi_lock_privacy_title">隐私管理</string>
    <string name="adi_lock_message_show_title">显示短信全文</string>
    <string name="adi_lock_weibo_private_msg_show_title">显示微博私信全文</string>
    <string name="adi_lock_yuebao_income_show_title">显示余额宝收益金额</string>
    <string name="adi_lock_zuiju_title">追剧管理</string>
    <string name="adi_lock_feedback_title">意见反馈</string>
    <string name="adi_lock_question_title">常见问题</string>
    <string name="adi_lock_update_title">版本信息</string>
    <string name="adi_lock_grade_title">评分</string>
    <string name="adi_lock_about_title">关于</string>
    <string name="adi_lock_exit_lock_title">停用锁屏宝</string>
    <string name="pref_title_page_taobao">显示淘宝页面</string>
    <string name="pref_title_page_system">显示系统通知页面</string>
    <string name="pref_title_page_news">显示新闻页面</string>
    <string name="pref_title_page_joke">显示囧图段子页面</string>
    <string name="feedback_title_text">意见反馈</string>
    <string name="feedback_text_hint">请填写建议、反馈、联系方式等</string>
    <string name="feedback_send_btn_title">提交</string>
    <string name="setting_feedback_tip">%d字</string>
    <string name="feedback_length_exceeded">字数超出限制，请重新编辑后再提交</string>
    <string name="feedback_dialog_btn_ok_text">关闭</string>
    <string name="feedback_dialog_msg_success">已提交，谢谢您的反馈！</string>
    <string name="feedback_dialog_msg_error">抱歉，提交反馈失败，请尝试重新提交</string>
    <string name="feedback_submit_on_progress">正在提交反馈意见...</string>
    <string name="about_title_text">关于</string>
    <string name="about_poster">精彩，从点亮屏幕开始</string>
    <string name="weibo_new_at_from_comment">%1$s条新@我的评论</string>
    <string name="weibo_new_at_from_status">%1$s条新@我的微博</string>
    <string name="weibo_new_at">\@我(%1$s)</string>
    <string name="weibo_new_comment">评论(%1$s)</string>
    <string name="weibo_new_private_msg">私信(%1$s)</string>
    <string name="weibo_followers_count">粉丝数:%1$s</string>
    <string name="weibo_friends_count">关注数:%1$s</string>
    <string name="weibo_comment_from_status">评论我的微博：</string>
    <string name="weibo_comment_from_comment">回复我的评论：</string>
    <string name="weibo_unbind_title">解除绑定</string>
    <string name="weibo_unbind_msg">解除绑定将无法获取微博私信、评论和转发，是否解除？</string>
    <string name="weiboSourceMaxLines">3</string>
    <string name="account_label">淘宝</string>
    <string name="pref_about">关于</string>
    <string name="pref_item1">账户安全保护</string>
    <string name="pref_value1">您的淘宝账户已受安全账户机制保护。</string>
    <string name="pref_item2">隐私权</string>
    <string name="pref_value2">淘宝账户不会同步您的隐私信息</string>
    <string name="pref_version">账号版本</string>
    <string name="default_account_name">我的主账号</string>
    <string name="permission_group_taobao_account">淘宝账号</string>
    <string name="permission_group_taobao_account_desc">您的淘宝账号</string>
    <string name="permission_use_taobao_account_credentials">使用您的淘宝账号登录信息</string>
    <string name="permission_use_taobao_account_credentials_desc">使用您在此设备上保存的淘宝账号登录信息</string>
    <string name="permission_update_taobao_account_credentials">更新您的淘宝账号登录信息</string>
    <string name="permission_update_taobao_account_credentials_desc">更新您在此设备上保存的淘宝账号登录信息</string>
    <string name="taobao_unbind_title">解除绑定</string>
    <string name="taobao_unbind_msg">解除绑定将无法跟踪物流，是否解除？</string>
    <string name="pref_remove_double_lock_title">去除双重解锁</string>
    <string name="pref_remove_double_lock_content">若要防止双重锁屏，请在“系统设置->安全->屏幕锁定”中选择“无”</string>
    <string name="lock_exit_dialog_title">停用锁屏宝</string>
    <string name="lock_exit_dialog_content">停用锁屏宝，将无法获取系统通知、物流、笑话等信息哦</string>
    <string name="unknown_number">未知来电</string>
    <string name="missed_sms">未读短信</string>
    <string name="missed_sms_count">%1$s</string>
    <string name="missed_call">未接来电</string>
    <string name="missed_call_count">%1$s</string>
    <string name="clear_system_notice">清除</string>
    <string name="weibo_title">新浪微博</string>
    <string name="weibo_msg_count">%1$s</string>
    <string name="dial_now">立即回拨</string>
    <string name="write_msg">发送短信</string>
    <string name="clear_title">清除系统通知</string>
    <string name="clear_msg">清除所有通知消息？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="go_to_setting">去设置</string>
    <string name="weibo_unbind_hint">绑定微博，实时获取私信，评论，转发哦</string>
    <string name="weibo_bind_btn_hint">绑定新浪微博</string>
    <string name="system_privacy_hint_0">若要显示短信内容, 请进入：</string>
    <string name="system_privacy_hint_1">设置-隐私管理 >></string>
    <string name="system_guide_scroll_up_default_tip">向上滑动解锁</string>
    <string name="market_nduoa">N多市场</string>
    <string name="guide_tip_doubleclick_me">点我两下</string>
    <string name="guide_step1_title">锁屏宝贴士1/3：</string>
    <string name="guide_step1_content">双击屏幕,</string>
    <string name="guide_step1_slogan">还我完美壁纸</string>
    <string name="guide_tip_scroll_up_unlock">向上滑动解锁</string>
    <string name="guide_tip_doubleclick_again">再点两下</string>
    <string name="guide_step2_title">锁屏宝贴士2/3：</string>
    <string name="setting_class_common">通用</string>
    <string name="setting_class_wallpaper">锁屏壁纸</string>
    <string name="setting_class_safe">安全</string>
    <string name="setting_class_account">帐户</string>
    <string name="setting_class_other">其他</string>
    <string name="show_statusbar">系统通知栏</string>
    <string name="show_statusbar_off">不显示</string>
    <string name="setting_account_not_login">未绑定</string>
    <string name="setting_account_taobao">淘宝账号</string>
    <string name="setting_unlock_none">滑动</string>
    <string name="show_picture">阅读模式</string>
    <string name="msg_always">总是显示图片</string>
    <string name="msg_only_wifi">仅wifi下显示图片</string>
    <string name="setting_home_launcher">防止Home键解锁</string>
    <string name="setting_home_launcher_description">未设置</string>
    <string name="remove_double_lock">去除双重解锁</string>
    <string name="remove_double_lock_description">解决系统锁屏重复出现的问题</string>
    <string name="wallpaper_freq_never">不更换</string>
    <string name="wallpaper_freq_halfday">半天一次</string>
    <string name="wallpaper_freq_everyday">每天一次</string>
    <string name="wallpaper_freq_weekly">每周一次</string>
    <string name="wallpaper_freq_screen_on">每次点亮屏幕</string>
    <string name="adi_guard_prompt_title">友情提示</string>
    <string name="adi_guard_prompt_content">锁屏宝需要root权限来启动守护者模式，这是为了防止在root过的手机上锁屏宝被杀死。</string>
    <string name="adi_guard_prompt_run">启动守护者模式</string>
    <string name="adi_guard_prompt_not_run">不要启动</string>
</resources>