<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" style="@style/setting_dialog_style"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:text="@string/adi_lock_background_freq" style="@style/setting_dialog_title" />
    <View style="@style/setting_dialog_title_border" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/WallpaperFreqScreenOn" android:tag="0" android:text="@string/wallpaper_freq_screen_on" android:drawableRight="@drawable/radio_button_on" style="@style/setting_dialog_list_checkbox_item" />
        <TextView android:id="@id/WallpaperFreqHalfDay" android:tag="43200000" android:text="@string/wallpaper_freq_halfday" style="@style/setting_dialog_list_checkbox_item" />
        <TextView android:id="@id/WallpaperFreqEveryDay" android:tag="86400000" android:text="@string/wallpaper_freq_everyday" style="@style/setting_dialog_list_checkbox_item" />
        <TextView android:id="@id/WallpaperFreqWeekly" android:tag="604800000" android:text="@string/wallpaper_freq_weekly" style="@style/setting_dialog_list_checkbox_item" />
        <TextView android:id="@id/WallpaperFreqNever" android:tag="-1" android:text="@string/wallpaper_freq_never" style="@style/setting_dialog_list_checkbox_item" />
    </LinearLayout>
    <View style="@style/setting_dialog_ctrl_border" />
    <Button android:id="@id/wallpaper_freq_btn_cancel" android:text="@string/cancel" style="@style/setting_dialog_cancel_button" />
</LinearLayout>