<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" style="@style/setting_dialog_style"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:text="@string/show_picture" style="@style/setting_dialog_title" />
    <View style="@style/setting_dialog_title_border" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/StateAlwayTextView" android:text="@string/msg_always" android:drawableRight="@drawable/radio_button_on" style="@style/setting_dialog_list_checkbox_item" />
        <TextView android:id="@id/StateWifiTextView" android:text="@string/msg_only_wifi" style="@style/setting_dialog_list_checkbox_item" />
    </LinearLayout>
    <View style="@style/setting_dialog_ctrl_border" />
    <Button android:id="@id/PositiveView" android:text="@string/cancel" style="@style/setting_dialog_cancel_button" />
</LinearLayout>