<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" style="@style/setting_dialog_style"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:text="@string/adi_guard_prompt_title" style="@style/setting_dialog_title" />
    <View style="@style/setting_dialog_title_border" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:paddingLeft="20.0dip" android:paddingTop="16.0dip" android:paddingRight="20.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/adi_guard_prompt_content" style="@style/setting_dialog_text_content_info" />
    </LinearLayout>
    <View style="@style/setting_dialog_ctrl_border" />
    <Button android:id="@id/adi_guard_btn_ok" android:text="@string/adi_guard_prompt_run" android:onClick="onOkClicked" style="@style/setting_dialog_cancel_button" />
    <Button android:id="@id/adi_guard_btn_cancel" android:text="@string/adi_guard_prompt_not_run" android:onClick="onCancelClicked" style="@style/setting_dialog_cancel_button" />
</LinearLayout>