<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/BgImageView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" />
    <include layout="@layout/layout_setting_banner" />
    <LinearLayout style="@style/setting_panel_wrap">
        <RelativeLayout style="@style/setting_activity_header">
            <Button android:id="@id/BackImageView" android:text="@string/action_settings" android:onClick="onClick" style="@style/setting_header_title" />
        </RelativeLayout>
        <com.alibaba.adi.collie.ui.view.BounceScrollView android:scrollbarThumbVertical="@drawable/scrollbar" android:id="@id/ScrollView" android:scrollbars="none" android:fadingEdge="none" style="@style/setting_content_container">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingTop="22.0dip" android:paddingBottom="@dimen/detail_margin_top" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" style="@style/setting_content_group">
                    <TextView android:text="@string/setting_class_common" style="@style/setting_content_header" />
                    <View style="@style/setting_header_divide" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/setting_fullscreen" style="@style/setting_panel_item_middle">
                        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_statusbar" style="@style/setting_panel_textview_title" />
                            <TextView android:id="@id/StatusBarSwitchDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_statusbar_off" style="@style/setting_panel_textview_subtitle" />
                        </LinearLayout>
                        <com.alibaba.adi.collie.ui.view.SwitchButton android:id="@id/StatusBarSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    </LinearLayout>
                    <View style="@style/setting_content_divide" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/setting_disable_home" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_home_launcher" style="@style/setting_panel_textview_title" />
                            <TextView android:id="@id/setting_disable_home_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_home_launcher_description" style="@style/setting_panel_textview_subtitle" />
                        </LinearLayout>
                        <ImageView style="@style/setting_panel_item_link_arrow" />
                    </LinearLayout>
                    <View style="@style/setting_content_divide" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/setting_remove_double_lock" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remove_double_lock" style="@style/setting_panel_textview_title" />
                            <TextView android:id="@id/RemoveDoubleLockTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remove_double_lock_description" style="@style/setting_panel_textview_subtitle" />
                        </LinearLayout>
                        <ImageView style="@style/setting_panel_item_link_arrow" />
                    </LinearLayout>
                    <View style="@style/setting_content_divide" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/adi_lock_page_manage_title" android:onClick="onClick" style="@style/setting_adi_lock_page_manage_title">
                        <LinearLayout android:orientation="vertical" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adi_lock_page_manage_title" style="@style/setting_panel_textview_title" />
                            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adi_lock_page_manage_subtitle" style="@style/setting_panel_textview_subtitle" />
                        </LinearLayout>
                        <ImageView style="@style/setting_panel_item_link_arrow" />
                    </LinearLayout>
                    <View style="@style/setting_content_divide" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/adi_weather_city" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adi_weather_city_title" style="@style/setting_panel_textview_title" />
                            <TextView android:id="@id/weather_city" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adi_lock_page_manage_subtitle" style="@style/setting_panel_textview_subtitle" />
                        </LinearLayout>
                        <ImageView style="@style/setting_panel_item_link_arrow" />
                    </LinearLayout>
                    <View style="@style/setting_content_divide" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/lock_show_picture_mode_layout" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_picture" style="@style/setting_panel_textview_title" />
                            <TextView android:id="@id/ShowPictureModeTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_always" style="@style/setting_panel_textview_subtitle" />
                        </LinearLayout>
                        <ImageView style="@style/setting_panel_item_link_arrow" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" style="@style/setting_content_group">
                    <TextView android:text="@string/setting_class_wallpaper" style="@style/setting_content_header" />
                    <View style="@style/setting_header_divide" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/lock_background_layout" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adi_lock_background_title" style="@style/setting_panel_textview_title" />
                            <TextView android:id="@id/LockWallpaperNumTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="单张" style="@style/setting_panel_textview_subtitle" />
                        </LinearLayout>
                        <ImageView style="@style/setting_panel_item_link_arrow" />
                    </LinearLayout>
                    <View style="@style/setting_content_divide" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/lock_background_freq" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <TextView android:id="@id/lock_background_freq_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adi_lock_background_freq" style="@style/setting_panel_textview_title" />
                            <TextView android:id="@id/lock_background_freq_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wallpaper_freq_weekly" style="@style/setting_panel_textview_subtitle" />
                        </LinearLayout>
                        <ImageView style="@style/setting_panel_item_link_arrow" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" style="@style/setting_content_group">
                    <TextView android:text="@string/setting_class_safe" style="@style/setting_content_header" />
                    <ImageView style="@style/setting_header_divide" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/lock_chose_layout" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adi_lock_chose_title" style="@style/setting_panel_textview_title" />
                            <TextView android:id="@id/LockTypeTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_unlock_none" style="@style/setting_panel_textview_subtitle" />
                        </LinearLayout>
                        <ImageView style="@style/setting_panel_item_link_arrow" />
                    </LinearLayout>
                    <View style="@style/setting_content_divide" />
                    <RelativeLayout android:id="@id/lock_privacy_layout" android:layout_width="fill_parent" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <TextView android:gravity="center_vertical" android:layout_width="wrap_content" android:text="@string/adi_lock_privacy_title" android:layout_centerVertical="true" style="@style/setting_panel_textview_title" />
                        <ImageView android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/setting_panel_item_link_arrow" />
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" style="@style/setting_content_group">
                    <TextView android:text="@string/setting_class_account" style="@style/setting_content_header" />
                    <ImageView style="@style/setting_header_divide" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/lock_account_layout" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <ImageView android:id="@id/SettingAccountIcon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_not_login_taobao" />
                        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_margin_left" android:layout_weight="1.0">
                            <TextView android:id="@id/SettingAccountName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_account_taobao" style="@style/setting_panel_textview_title" />
                            <TextView android:id="@id/SettingAccountLoginMode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_account_not_login" style="@style/setting_panel_textview_subtitle" />
                        </LinearLayout>
                        <ImageView style="@style/setting_panel_item_link_arrow" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" style="@style/setting_content_group">
                    <TextView android:text="@string/setting_class_other" style="@style/setting_content_header" />
                    <ImageView style="@style/setting_header_divide" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/lock_version_layout" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <RelativeLayout android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <TextView android:id="@id/lock_update" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adi_lock_update_title" style="@style/setting_panel_textview_title" />
                            <TextView android:id="@id/VersionNameTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/lock_update" style="@style/setting_panel_textview_subtitle" />
                            <ImageView android:id="@id/VersionTipImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_new" android:layout_toRightOf="@id/lock_update" />
                        </RelativeLayout>
                        <ImageView style="@style/setting_panel_item_link_arrow" />
                    </LinearLayout>
                    <View style="@style/setting_content_divide" />
                    <RelativeLayout android:id="@id/lock_feedback_layout" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adi_lock_feedback_title" android:layout_centerVertical="true" style="@style/setting_panel_textview_title" />
                        <ImageView android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/setting_panel_item_link_arrow" />
                    </RelativeLayout>
                    <View style="@style/setting_content_divide" />
                    <RelativeLayout android:id="@id/lock_question_layout" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adi_lock_question_title" android:layout_centerVertical="true" style="@style/setting_panel_textview_title" />
                        <ImageView android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/setting_panel_item_link_arrow" />
                    </RelativeLayout>
                    <View style="@style/setting_content_divide" />
                    <RelativeLayout android:id="@id/lock_about_layout" android:onClick="onClick" style="@style/setting_panel_item_middle">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adi_lock_about_title" android:layout_centerVertical="true" style="@style/setting_panel_textview_title" />
                        <ImageView android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/setting_panel_item_link_arrow" />
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="@dimen/settings_margin_left" android:paddingTop="@dimen/settings_qrcode_padding_top" android:paddingRight="@dimen/settings_margin_right" android:paddingBottom="@dimen/settings_qrcode_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@id/adi_lock_qrcode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/adi_lock_qrcode" android:onClick="onClick" android:alpha="0.75" />
                    <TextView android:textSize="@dimen/setting_main_des_textsize" android:textColor="@color/white_alph_60" android:gravity="center" android:id="@id/QrcodeVersionTextView" android:paddingTop="@dimen/setting_qrcode_textview_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lineSpacingExtra="@dimen/setting_qrcode_textview_line_spacing" />
                    <Button android:textSize="@dimen/textsize_16" android:textColor="@color/white" android:gravity="center" android:id="@id/AdiLockExitButton" android:background="@drawable/exit_lock_btn_bg" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="30.0dip" android:text="@string/adi_lock_exit_lock_title" android:onClick="onClick" />"
</LinearLayout>
            </LinearLayout>
        </com.alibaba.adi.collie.ui.view.BounceScrollView>
    </LinearLayout>
</RelativeLayout>